table overflow fix CA-29 , Report element Design menu fix CA-28

--- a/style.css
+++ b/style.css
@@ -361,15 +361,37 @@ span.button-holder,
   right: 0;
   left: auto
 }
-
+.table-scrollable {
+  overflow-y: scroll;
+  display:block;
+  height: calc(100% - 50px);
+  width: 100%;
+}
+.full-height {
+  height: 100%
+}
+.report-element-wrapper {
+  height: 100%;
+}
+.report--design .optionalItem {
+  display: none
+}
+.report--design .dropdown-menu {
+  top: 50px!important;
+}
+.report--design .dropdown-toggle {
+  position: absolute;
+  top: 10px;
+  right: 0;
+}
 .report--design .vdp-datepicker__calendar {
   left: 0!important;
   right: auto!important;
 }
 
-.report--design .toggleTriggerBox {
+/*.report--design .toggleTriggerBox {
   display: none
-}
+}*/
 
 .main--input {
   background: #fff;
